# pmd-django

./: README.md  pyproject.toml
pmd_django/: auth.py
testapp/: test_api.py  test_auth_middleware.py
